5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1649_2703.log
== TEST (2019-04-15 20:08:26) 
-- CODE:
idade=int(print("digite a idade:"))
if>=18
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=18
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:08:28) 
-- CODE:
idade=int(print("digite a idade:"))
if>=18
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=18
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:08:34) 
-- CODE:
idade=int(print("digite a idade:"))
.if>=18
print("eleitor")

-- ERROR:
File "XXXX", line 2
    .if>=18
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:08:59) 
-- CODE:
idade=int(print("digite a idade:"))
if>=(18)
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=(18)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:09:00) 
-- CODE:
idade=int(print("digite a idade:"))
if>=(18)
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=(18)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:09:17) 
-- CODE:
idade=int(print("digite a idade:"))
if>=18:
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=18:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:09:18) 
-- CODE:
idade=int(print("digite a idade:"))
if>=18:
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=18:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:09:19) 
-- CODE:
idade=int(print("digite a idade:"))
if>=18:
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=18:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:09:20) 
-- CODE:
idade=int(print("digite a idade:"))
if>=18:
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=18:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:09:20) 
-- CODE:
idade=int(print("digite a idade:"))
if>=18:
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=18:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:09:20) 
-- CODE:
idade=int(print("digite a idade:"))
if>=18:
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=18:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:09:20) 
-- CODE:
idade=int(print("digite a idade:"))
if>=18:
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=18:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:09:21) 
-- CODE:
idade=int(print("digite a idade:"))
if>=18:
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if>=18:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:10:40) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade,>=18:)
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if (idade,>=18:)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:10:41) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade,>=18:)
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if (idade,>=18:)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:10:41) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade,>=18:)
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if (idade,>=18:)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:10:41) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade,>=18:)
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if (idade,>=18:)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:10:50) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade>=18:)
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if (idade>=18:)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:10:51) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade>=18:)
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if (idade>=18:)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:10:52) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade>=18:)
print("eleitor")

-- ERROR:
File "XXXX", line 2
    if (idade>=18:)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:10:58) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:10:59) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:00) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:00) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:00) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:01) 
-- CODE:
idade=int(print("digite a idade:"))
if (idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:31) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:32) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:32) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:33) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:33) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor")

-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:55) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:56) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:56) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:57) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:57) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:58) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:58) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:58) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:58) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:59) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:59) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:11:59) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:00) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:00) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:00) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:00) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor)

-- ERROR:
File "XXXX", line 3
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:33) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:34) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:35) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:35) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:35) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:36) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:36) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:36) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:36) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:36) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:36) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor).lower

-- ERROR:
File "XXXX", line 3
    print(eleitor).lower
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:12:59) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor(.lower())

-- ERROR:
File "XXXX", line 3
    print(eleitor(.lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:13:00) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor(.lower())

-- ERROR:
File "XXXX", line 3
    print(eleitor(.lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:13:01) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor(.lower())

-- ERROR:
File "XXXX", line 3
    print(eleitor(.lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:13:01) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor(.lower())

-- ERROR:
File "XXXX", line 3
    print(eleitor(.lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:13:06) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor.lower())

-- ERROR:
File "XXXX", line 3
    print(eleitor.lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:13:07) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor.lower())

-- ERROR:
File "XXXX", line 3
    print(eleitor.lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:13:08) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor.lower())

-- EXECUTION TIME:
0.177717
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 3
    print(eleitor.lower())
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:13:15) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(eleitor.lower()):

-- ERROR:
File "XXXX", line 3
    print(eleitor.lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:13:32) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor"(.lower()):

-- ERROR:
File "XXXX", line 3
    print("eleitor"(.lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:13:41) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:14:27) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:14:29) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:14:29) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:14:41) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor").lower():
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print("eleitor").lower():
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:14:52) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor"(.lower()):
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print("eleitor"(.lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:14:53) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor"(.lower()):
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print("eleitor"(.lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:14:53) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor"(.lower()):
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print("eleitor"(.lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:14:54) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor"(.lower()):
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print("eleitor"(.lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:15:11) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(idade,"eleitor"(.lower()):
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print(idade,"eleitor"(.lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:15:12) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(idade,"eleitor"(.lower()):
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print(idade,"eleitor"(.lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:15:12) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print(idade,"eleitor"(.lower()):
else:
("nao_eleitor")
		

-- ERROR:
File "XXXX", line 3
    print(idade,"eleitor"(.lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:15:59) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:00) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:00) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:00) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:01) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:11) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:13) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:13) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:13) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:14) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:14) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:15) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:15) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>=18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:40) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:41) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:41) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade>18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:16:49) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
print("eleitor".lower()):
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower()):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:17:08) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
print("eleitor".lower())
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:17:09) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
print("eleitor".lower())
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:17:10) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
print("eleitor".lower())
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:17:11) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
print("eleitor".lower())
else:
print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 3
    print("eleitor".lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:17:28) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade=int(print("digite a idade:"))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:17:29) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade=int(print("digite a idade:"))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:17:29) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade=int(print("digite a idade:"))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:17:30) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade=int(print("digite a idade:"))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:17:34) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade=int(print("digite a idade:"))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:17:48) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- EXECUTION TIME:
0.157432
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2703/main.py", line 1, in <module>
    idade=int(print("digite a idade:"))
TypeError: int() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:17:49) 
-- CODE:
idade=int(print("digite a idade:"))
if(idade > 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade=int(print("digite a idade:"))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:18:08) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade > 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:18:14) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade > 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- EXECUTION TIME:
0.148664
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:19:09) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade => 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- ERROR:
File "XXXX", line 2
    if(idade => 18):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:19:17) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade >= 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:19:22) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade >= 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:19:28) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade > 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:19:38) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade >= 18):
   print("eleitor".lower())
else:
   print("nao_eleitor".lower())
		

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
